// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 1`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "no-1": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@@selector-common-name-0": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "3": {
    "className": "AtomInstance",
    "observers": {
      "no-2": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@@selector-common-name-0": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "@@selector-common-name-0": {
    "className": "SelectorInstance",
    "observers": {
      "1": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
      "3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 2,
  },
  "no-1": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "1": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "no-2": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "3": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "root": {
    "className": "AtomInstance",
    "observers": {
      "@@selector-common-name-0": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 2`] = `
{
  "2": {
    "className": "AtomInstance",
    "observers": {
      "no-4": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@@selector-common-name-3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 4,
    "status": "Active",
    "weight": 3,
  },
  "@@selector-common-name-3": {
    "className": "SelectorInstance",
    "observers": {
      "2": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 4,
    "status": "Active",
    "weight": 2,
  },
  "no-4": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "2": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "root": {
    "className": "AtomInstance",
    "observers": {
      "@@selector-common-name-3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 3`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "no-5": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@@selector-common-name-0": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "2": {
    "className": "AtomInstance",
    "observers": {
      "no-4": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@@selector-common-name-3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 4,
    "status": "Active",
    "weight": 3,
  },
  "3": {
    "className": "AtomInstance",
    "observers": {
      "no-6": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@@selector-common-name-0": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "@@selector-common-name-0": {
    "className": "SelectorInstance",
    "observers": {
      "1": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
      "3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 2,
  },
  "@@selector-common-name-3": {
    "className": "SelectorInstance",
    "observers": {
      "2": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 4,
    "status": "Active",
    "weight": 2,
  },
  "no-4": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "2": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "no-5": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "1": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "no-6": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "3": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "root": {
    "className": "AtomInstance",
    "observers": {
      "@@selector-common-name-0": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
      "@@selector-common-name-3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
}
`;

exports[`selection same-name selectors share the namespace when destroyed and recreated at different times 4`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "no-5": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@@selector-common-name-0": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "3": {
    "className": "AtomInstance",
    "observers": {
      "no-6": {
        "flags": 6,
        "operation": "on",
      },
    },
    "sources": {
      "@@selector-common-name-0": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 3,
  },
  "@@selector-common-name-0": {
    "className": "SelectorInstance",
    "observers": {
      "1": {
        "flags": 1,
        "operation": "injectAtomValue",
        "p": undefined,
      },
      "3": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {
      "root": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 3,
    "status": "Active",
    "weight": 2,
  },
  "no-5": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "1": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "no-6": {
    "className": "Listener",
    "observers": {},
    "sources": {
      "3": {
        "flags": 6,
        "operation": "on",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 4,
  },
  "root": {
    "className": "AtomInstance",
    "observers": {
      "@@selector-common-name-0": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": 1,
    "status": "Active",
    "weight": 1,
  },
}
`;
